Fix dark mode header link

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -29,8 +29,8 @@ div.container>div.title {
 }
 
 h1>a {
-    color: initial;
-    text-decoration: initial;
+    color: black;
+    text-decoration: none;
 }
 
 div.home {
@@ -122,6 +122,11 @@ div#subtitle {
         background-image: radial-gradient(rgb(66, 66, 66) 1px, black 1px);
         color: white;
     }
+    
+    h1>a {
+        color: white;
+    }
+    
     a.button1 {
         /* background-color: black; */
         border: 0.1em solid white;
